hphp/hack/test/typecheck/array/disallow_value_inputs_for_darray.php.exp
ERROR: File "disallow_value_inputs_for_darray.php", line 4, characters 9-9:
An arrow `=>` is expected here. (Parsing[1002])
ERROR: File "disallow_value_inputs_for_darray.php", line 4, characters 9-9:
Unbound name: `]` (a global constant) (Naming[2049])
ERROR: File "disallow_value_inputs_for_darray.php", line 4, characters 9-9:
Unbound global constant (Typing) (Typing[4106])
